src/test/ui/never-fallback/obj_implicit.stderr
error: Fallback to `!` may introduce undefined behavior
  --> $DIR/obj_implicit.rs:14:15
   |
LL |         match unconstrained_return() {
   |               ^^^^^^^^^^^^^^^^^^^^^^
   |
note: the type parameter T here was inferred to `!`
  --> $DIR/obj_implicit.rs:14:15
   |
LL |         match unconstrained_return() {
   |               ^^^^^^^^^^^^^^^^^^^^
note: (type parameter defined here)
  --> $DIR/obj_implicit.rs:8:25
   |
LL | fn unconstrained_return<T>() -> Result<T, String> {
   |                         ^
note: ... due to this expression evaluating to `!`
  --> $DIR/obj_implicit.rs:16:23
   |
LL |             Err(s) => panic!(s),  // … except for unifying with the type of `panic!()`
   |                       ^^^^^^^^^
   = note: If you want the `!` type to be used here, add explicit type annotations
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

